Create a product with all requirements